<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">속닥대</string>
    <string name="toolbar_title">속닥대</string>

    <!-- 홈/작성 -->
    <string name="start_title">익명 상담 시작</string>
    <string name="start_desc">걱정마세요, 익명으로만 전달됩니다.</string>
    <string name="start_button">문의하기</string>
    <string name="history_button">내 상담 내역</string>
    <string name="analysis_title">상담할 내용을 적으세요.</string>
    <string name="analysis_subtitle">걱정마세요, 익명으로만 전달됩니다.</string>
    <string name="message_hint">민원/상담 내용을 구체적으로 작성해주세요.</string>
    <string name="analysis_recipient_placeholder">추천 수신자 없음</string>
    <string name="analysis_category_placeholder">카테고리</string>
    <string name="analysis_priority_placeholder">긴급도</string>
    <string name="analysis_keyword_placeholder">키워드가 추출되면 표시됩니다.</string>
    <string name="analysis_confirm">추천 확인</string>
    <string name="recommend_title">추천해요!</string>
    <string name="recommend_empty">추천 수신자 없음</string>
    <string name="error_empty_message">내용을 입력해주세요.</string>

    <!-- 설정 -->
    <string name="settings_title">설정</string>
    <string name="settings_current_info">내 정보</string>
    <string name="settings_user_name">이름</string>
    <string name="settings_user_email">이메일</string>
    <string name="settings_anon_id">익명 ID</string>
    <string name="settings_copy">복사</string>
    <string name="settings_override_title">익명 ID 붙여넣기</string>
    <string name="settings_override_desc">다른 기기에서 받은 익명 ID를 붙여넣어 같은 별칭으로 이어서 사용할 수 있습니다.</string>
    <string name="settings_input_hint">익명 ID 입력</string>
    <string name="settings_apply">적용</string>
    <string name="settings_logout">로그아웃</string>

    <!-- 역할/로그인 -->
    <string name="role_login_title">역할 로그인</string>
    <string name="role_login_desc">상담자/관리자는 이메일로 로그인, 학생은 익명 모드로 사용할 수 있습니다.</string>
    <string name="role_login_email">이메일</string>
    <string name="role_login_password">비밀번호</string>
    <string name="role_login_button">로그인</string>
    <string name="role_login_anonymous">익명 학생 모드</string>
    <string name="role_current">현재 역할</string>
    <string name="role_student">학생</string>
    <string name="role_respondent">상담자</string>
    <string name="role_admin">관리자</string>
</resources>
